fix: add mozilla prefixes to fix truncation on firefox

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -7,6 +7,7 @@ body {
 }
 
 .element {
+  width: -moz-fit-content;
   width: fit-content;
   background: rgba(100, 100, 100, 0.25);
   width: 100%;
