--- a/src/components/TransformComponent.module.css
+++ b/src/components/TransformComponent.module.css
@@ -1,5 +1,7 @@
 .container {
   position: relative;
+  width: -moz-fit-content;
+  height: -moz-fit-content;
   width: fit-content;
   height: fit-content;
   overflow: hidden;
@@ -15,6 +17,8 @@
 .content {
   display: flex;
   flex-wrap: wrap;
+  width: -moz-fit-content;
+  height: -moz-fit-content;
   width: fit-content;
   height: fit-content;
   margin: 0;
